--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -38,4 +38,7 @@
     "search.exclude": {
         "**/test": true,
     },
+    "python.analysis.extraPaths": [
+        "blender_autocomplete/2.91"
+    ],
 }
